# To-DoAppSimple

./: .env  API_PLAN.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
backend/: .env  check_users.py  list_users_response.txt  pyproject.toml  reset_db.py  setup_admin.py  test_auth.py  test_endpoints.py  token.txt  update_user_response.txt
backend/app/: main.py
backend/app/database/: database.py
backend/app/schemas/: admin.py  password_reset.py  todo.py  user.py
backend/app/templates/: reset_password_email.html
backend/app/utils/: auth.py
backend/data/: todo.db
backend/migrations/: add_created_at.py
frontend/: .env  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AdminDashboard.tsx  AppLayout.tsx  LoginForm.tsx  RegisterForm.tsx  RequestPasswordForm.tsx  ResetPasswordForm.tsx  TodoForm.tsx  TodoList.tsx
frontend/src/components/ui/: use-toast.ts
server/: index.js
src/: App.tsx  env.d.ts  main.tsx
src/components/: AddHabit.tsx  CreateHabit.tsx  ExecuteHabit.tsx  HabitGroups.tsx
src/types/: index.ts
